respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Supplier_Quote_Line__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Import_Taxes_Amount__c</fullName>
        <label>Additional Import Taxes Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Import_Taxes_Detail__c</fullName>
        <label>Additional Import Taxes Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category_DC_Value__c</fullName>
        <label>Category DC Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_DC__c</fullName>
        <label>Category DC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Consolidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Currency_Header__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Currency Header</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customs_Incoterm__c</fullName>
        <label>Customs Incoterm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customs_Value__c</fullName>
        <label>Customs Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Number__c</fullName>
        <label>Delivery Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>% Discount</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounts_Applied__c</fullName>
        <label>Discounts Applied</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duty__c</fullName>
        <label>Duty</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_Commerce_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-Commerce Offer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>E_Commerce_Offer__c.Item_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Item__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>E_Commerce_Offer__c</referenceTo>
        <relationshipLabel>Supplier Quote/Order Lines</relationshipLabel>
        <relationshipName>Supplier_Quote_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Concept__c</fullName>
        <label>Expense Concept</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Supplier Quote/Order Lines</relationshipLabel>
        <relationshipName>Supplier_Quote_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Buy_Amount__c</fullName>
        <formula>Quantity__c  *   Quote_Order_Buy_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Units&quot; x &quot;Quote/Order Buy Price&quot;</inlineHelpText>
        <label>Gross Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HS_Code__c</fullName>
        <label>HS Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imp_Exp_Charges_Assigned_Percent__c</fullName>
        <formula>Imp_Exp_Charges_Assigned__c / Total_Destination_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Imp-Exp Charges Assigned&quot; / &quot;Total Destination Amount&quot;</inlineHelpText>
        <label>Imp-Exp Charges Assigned (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Imp_Exp_Charges_Assigned__c</fullName>
        <description>If &quot;Total Volume (m3)&quot; from &quot;Supplier Quote/Order&quot; different from 0 then (&quot;Total Volume (m3)&quot; / &quot;Total Volume (m3)&quot; from &quot;Supplier Quote/Order&quot;) x (&quot;Total Fees Sell Amount&quot; from &quot;Supplier Quote/Order&quot; / &quot;Conversion Rate to Currency Header&quot;)
If &quot;Total Weight (Kg)&quot; from &quot;Supplier Quote/Order&quot; different from 0 then (&quot;Total Weight (Kg)&quot; / &quot;Total Weight (Kg)&quot; from &quot;Supplier Quote/Order&quot;) x (&quot;Total Fees Sell Amount&quot; from &quot;Supplier Quote/Order&quot; / &quot;Conversion Rate to Currency Header&quot;)</description>
        <formula>IF(Supplier_Quote__r.Total_Volume_m3_2__c&lt;&gt;0,Total_Volume_m3__c/ Supplier_Quote__r.Total_Volume_m3_2__c, IF(Supplier_Quote__r.Total_Weight_Kg2__c&lt;&gt;0,Total_Weight_Kg__c / Supplier_Quote__r.Total_Weight_Kg2__c,null)) * Supplier_Quote__r.Total_Fees_Sell_Amount_number__c /  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(&quot;Total Volume (m3)&quot; / &quot;Total Volume (m3)&quot; from &quot;Supplier Quote/Order&quot;) or (&quot;Total Weight (Kg)&quot; / &quot;Total Weight (Kg)&quot; from &quot;Supplier Quote/Order&quot;) x (&quot;Total Fees Sell Amount&quot; from &quot;Supplier Quote/Order&quot; / &quot;Conversion Rate to Currency Header&quot;)</inlineHelpText>
        <label>Imp-Exp Charges Assigned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Import_Export_Consolidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Import-Export Consolidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Export_Item_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import-Export Item Line</label>
        <referenceTo>Quote_Item_Line__c</referenceTo>
        <relationshipLabel>Supplier Quote/Order Lines</relationshipLabel>
        <relationshipName>Supplier_Quote_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <formula>Item__r.Sourcing_Item_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Item Code&quot; inside &quot;Item&quot;</inlineHelpText>
        <label>Item Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_List_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item List Price</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Item_List_Price__c.Item_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Item__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item_List_Price__c</referenceTo>
        <relationshipLabel>Supplier Quote/Order Lines</relationshipLabel>
        <relationshipName>Supplier_Quote_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Units_x_Packaging__c</fullName>
        <label>Item Units / Packaging</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Sourcing_Item__c</referenceTo>
        <relationshipLabel>Supplier Quote/Order Lines</relationshipLabel>
        <relationshipName>Supplier_Quote_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_to_Supply__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item to Supply</label>
        <referenceTo>Items_to_Supply__c</referenceTo>
        <relationshipName>Supplier_Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <formula>Quantity__c   *  Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Units&quot; x &quot;Net Price&quot;</inlineHelpText>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <formula>Quote_Order_Buy_Price__c    *  ( 1 -  Discount__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Quote/Order Buy Price&quot; x (1 - &quot;Discount&quot;)</inlineHelpText>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Containers__c</fullName>
        <label>Number of Containers</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observations__c</fullName>
        <label>Observations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Price__c</fullName>
        <label>Offer Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Packaging_Description__c</fullName>
        <label>Packaging Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging_Gross_Weight_kg__c</fullName>
        <formula>Item_Units_x_Packaging__c * Supplier_Item_Weight_kg__c + Packaging_Weight_kg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Item Units x Packaging&quot; x &quot;Supplier Item Weight (Kg)&quot; + &quot;Packaging Weight (Kg)&quot;</inlineHelpText>
        <label>Packaging Gross Weight (kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Height_cm__c</fullName>
        <label>Packaging Height (cm)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Length_cm__c</fullName>
        <label>Packaging Length (cm)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Quantity__c</fullName>
        <formula>Quantity__c / Item_Units_x_Packaging__c</formula>
        <inlineHelpText>&quot;Units&quot; / &quot;Item Units x Packaging&quot;</inlineHelpText>
        <label>Packaging Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Volume_m3__c</fullName>
        <formula>( Packaging_Length_cm__c * Packaging_Height_cm__c * Packaging_Width_cm__c) / 1000000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(&quot;Packaging Length (cm)&quot; x &quot;Packaging Height (cm)&quot; x &quot;Packaging Width (cm)&quot;) / 1000000</inlineHelpText>
        <label>Packaging Volume (m3)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Weight_kg__c</fullName>
        <label>Packaging Weight (kg)</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_Width_cm__c</fullName>
        <label>Packaging Width (cm)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Duty__c</fullName>
        <label>Percent Duty</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Taxes__c</fullName>
        <label>Percent Taxes</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Item Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Item_DC_Value__c</fullName>
        <label>Product Item DC Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Item_DC__c</fullName>
        <label>Product Item DC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Time_Days__c</fullName>
        <label>Production Time (Days)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Order_Buy_Price__c</fullName>
        <formula>BLANKVALUE(Offer_Price__c,BLANKVALUE(List_Price__c,Price__c))</formula>
        <label>Quote/Order Buy Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subcategory_DC_Value__c</fullName>
        <label>Subcategory DC Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcategory_DC__c</fullName>
        <label>Subcategory DC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subfamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subfamily</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Subfamily__c.Product_Family__c</field>
                <operation>equals</operation>
                <valueField>$Source.Family__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subfamily__c</referenceTo>
        <relationshipLabel>Supplier Quote/Order Lines</relationshipLabel>
        <relationshipName>Supplier_Quote_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Item_Weight_kg__c</fullName>
        <label>Supplier Item Weight (kg)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote__c</fullName>
        <label>Supplier Quote/Order</label>
        <referenceTo>Supplier_Quote__c</referenceTo>
        <relationshipLabel>Supplier Quote/Order Lines</relationshipLabel>
        <relationshipName>Supplier_Quote_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supplier_Request_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Request Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier_Request_Line__c.Supplier_Request_RFP__c</field>
                <operation>equals</operation>
                <valueField>$Source.Supplier_Request_RFP__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Supplier_Request_Line__c</referenceTo>
        <relationshipLabel>Supplier Quote/Order Lines</relationshipLabel>
        <relationshipName>Supplier_Quote_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Request_RFP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Request</label>
        <referenceTo>Supplier_Request_RFP__c</referenceTo>
        <relationshipLabel>Supplier Quote/Order Lines</relationshipLabel>
        <relationshipName>Supplier_Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Total_Volume_m3__c</fullName>
        <formula>Packaging_Volume_m3__c * Packaging_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Packaging Volume (m3)&quot; x &quot;Packaging Quantity&quot;</inlineHelpText>
        <label>Supplier Total Volume (m3)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Total_Weight_kg__c</fullName>
        <formula>Packaging_Gross_Weight_kg__c * Packaging_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Packaging Gross Weight (kg)&quot; x &quot;Packaging Quantity&quot;</inlineHelpText>
        <label>Supplier Total Weight (kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <formula>Supplier_Quote__r.Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Supplier&quot; inside &quot;Supplier Quote/Order&quot;</inlineHelpText>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Net_Amount__c   +  Expense_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Net Amount&quot; + &quot;Expense Amount&quot;</inlineHelpText>
        <label>Total Origin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Destination_Amount__c</fullName>
        <formula>Total_Amount__c + Imp_Exp_Charges_Assigned__c + Total_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Amount&quot; + &quot;Imp-Exp Charges Assigned&quot; + &quot;Total Taxes&quot;</inlineHelpText>
        <label>Total Destination Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Origin_Amount_header_currency__c</fullName>
        <formula>Total_Amount__c *  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Origin Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Taxes__c</fullName>
        <formula>Duty__c + Sales_Tax__c +  Additional_Import_Taxes_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Duty&quot; + &quot;Sales Tax&quot; + &quot;Additional Import Taxes Amount&quot;</inlineHelpText>
        <label>Total Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Taxes_header_currency__c</fullName>
        <formula>Total_Taxes__c *  Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Taxes (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Volume_m3__c</fullName>
        <label>Total Volume (m3)</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Weight_Kg__c</fullName>
        <label>Total Weight (Kg)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Destination_Price__c</fullName>
        <formula>Total_Destination_Amount__c / Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Destination Amount&quot; / &quot;Units&quot;</inlineHelpText>
        <label>Unit Destination Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Origin_Price__c</fullName>
        <formula>Total_Amount__c / Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total Amount&quot; / &quot;Units&quot;</inlineHelpText>
        <label>Unit Origin Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_measure__c</fullName>
        <formula>TEXT (Item__r.Unit_of_measure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Unit of measure&quot; inside &quot;Item&quot;</inlineHelpText>
        <label>Unit of measure</label>
        <type>Text</type>
    </fields>
    <label>Supplier Quote/Order Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Supplier__c</columns>
        <columns>Supplier_Quote__c</columns>
        <columns>Item__c</columns>
        <columns>Quote_Order_Buy_Price__c</columns>
        <columns>Net_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SQO Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Quote/Order Lines</pluralLabel>
    <recordTypes>
        <fullName>Supplier_Quote_Order_Line</fullName>
        <active>true</active>
        <label>Supplier Quote/Order Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier_Quote_Order_Line_Hidden</fullName>
        <active>true</active>
        <label>Supplier Quote/Order Line Hidden</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>